; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx5/extr_qp.c_set_reg_umr_seg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx5/extr_qp.c_set_reg_umr_seg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_wqe_umr_ctrl_seg = type { i32, i32, i32 }
%struct.mlx5_ib_mr = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5_wqe_umr_ctrl_seg*, %struct.mlx5_ib_mr*, i32, i32)* @set_reg_umr_seg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_reg_umr_seg(%struct.mlx5_wqe_umr_ctrl_seg* %0, %struct.mlx5_ib_mr* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.mlx5_wqe_umr_ctrl_seg*, align 8
  %6 = alloca %struct.mlx5_ib_mr*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.mlx5_wqe_umr_ctrl_seg* %0, %struct.mlx5_wqe_umr_ctrl_seg** %5, align 8
  store %struct.mlx5_ib_mr* %1, %struct.mlx5_ib_mr** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.mlx5_ib_mr*, %struct.mlx5_ib_mr** %6, align 8
  %11 = getelementptr inbounds %struct.mlx5_ib_mr, %struct.mlx5_ib_mr* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.mlx5_ib_mr*, %struct.mlx5_ib_mr** %6, align 8
  %14 = getelementptr inbounds %struct.mlx5_ib_mr, %struct.mlx5_ib_mr* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = add nsw i32 %12, %15
  %17 = load %struct.mlx5_ib_mr*, %struct.mlx5_ib_mr** %6, align 8
  %18 = getelementptr inbounds %struct.mlx5_ib_mr, %struct.mlx5_ib_mr* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = mul nsw i32 %16, %19
  store i32 %20, i32* %9, align 4
  %21 = load %struct.mlx5_wqe_umr_ctrl_seg*, %struct.mlx5_wqe_umr_ctrl_seg** %5, align 8
  %22 = call i32 @memset(%struct.mlx5_wqe_umr_ctrl_seg* %21, i32 0, i32 12)
  %23 = load i32, i32* %7, align 4
  %24 = load %struct.mlx5_wqe_umr_ctrl_seg*, %struct.mlx5_wqe_umr_ctrl_seg** %5, align 8
  %25 = getelementptr inbounds %struct.mlx5_wqe_umr_ctrl_seg, %struct.mlx5_wqe_umr_ctrl_seg* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @get_xlt_octo(i32 %26)
  %28 = call i32 @cpu_to_be16(i32 %27)
  %29 = load %struct.mlx5_wqe_umr_ctrl_seg*, %struct.mlx5_wqe_umr_ctrl_seg** %5, align 8
  %30 = getelementptr inbounds %struct.mlx5_wqe_umr_ctrl_seg, %struct.mlx5_wqe_umr_ctrl_seg* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @frwr_mkey_mask(i32 %31)
  %33 = load %struct.mlx5_wqe_umr_ctrl_seg*, %struct.mlx5_wqe_umr_ctrl_seg** %5, align 8
  %34 = getelementptr inbounds %struct.mlx5_wqe_umr_ctrl_seg, %struct.mlx5_wqe_umr_ctrl_seg* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  ret void
}

declare dso_local i32 @memset(%struct.mlx5_wqe_umr_ctrl_seg*, i32, i32) #1

declare dso_local i32 @cpu_to_be16(i32) #1

declare dso_local i32 @get_xlt_octo(i32) #1

declare dso_local i32 @frwr_mkey_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
